<resources>
    <string name="app_name">Dragon Sushi</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="nome_completo">Nome completo</string>
    <string name="telefone">Telefone</string>
    <string name="email">E-mail</string>
    <string name="senha">Senha</string>
    <string name="confirmar_senha">Confirmar senha</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="editar_perfil">Editar perfil</string>
    <string name="editar">Editar</string>
    <string name="salvar">Salvar</string>
    <string name="formas_de_pagamento">Formas de pagamento</string>
    <string name="cartao_credito">Cartão de crédito</string>
    <string name="cartao_debito">Cartão de débito</string>
    <string name="vale_refeicao">Vale refeição</string>
    <string name="dinheiro">Dinheiro</string>
    <string name="pix">Pix</string>
    <string name="endereco">Endereço</string>
    <string name="localizacao_atual">Usar localização atual</string>
    <string name="cep">CEP</string>
    <string name="numero">Número</string>
    <string name="bairro">Bairro</string>
    <string name="complemento">Complemento</string>
    <string name="cidade">Cidade</string>
    <string name="uf">UF</string>
    <string name="pedido_realizado">Pedido realizado com sucesso!</string>
    <string name="aguarde">Fique no aguardo, seu pedido chegará em alguns intantes.</string>
    <string name="voltar_pagina_principal">Voltar à página principal</string>
    <string name="nome_do_usuario">Nome do usuário</string>
    <string name="email_do_usuario">Email do usuário</string>
    <string name="historico_de_pedidos">Histórico de pedidos</string>
    <string name="nome_do_produto">Nome do produto</string>
    <string name="preco">R$0,00</string>
    <string name="descricao_do_produto">Descrição do produto</string>
    <string name="categoria">Categoria</string>
    <string name="data">Data</string>
    <string name="numero_de_itens">Número de itens</string>
    <string name="historico">Histórico</string>
    <string name="observacao">Observação</string>
    <string name="_0">0</string>
    <string name="subtotal_000">Subtotal: R$0,00</string>
    <string name="adicionar_ao_carrinho">Adicionar ao carrinho</string>
    <string name="carrinho">Carrinho</string>
    <string name="limpar">Limpar</string>
    <string name="subtotal">Subtotal:</string>
    <string name="taxa_de_entrega">Taxa de entrega:</string>
    <string name="total">Total:</string>
    <string name="pagamento">Pagamento</string>
    <string name="selecione_a_forma_de_pagamento">Selecione a forma de pagamento</string>
    <string name="entrega">Entrega</string>
    <string name="selecione_o_endere_o_de_entrega">Selecione o endereço de entrega</string>
    <string name="fazer_pedido">Fazer pedido</string>
    <string name="login">Login</string>
    <string name="continuar">CONTINUAR</string>
    <string name="fazer_login">Fazer login</string>
    <string name="senha_">SENHA</string>
    <string name="login_">LOGIN</string>
    <string name="cpf">CPF</string>
    <string name="entradas">Entradas</string>
    <string name="pratos_quentes">Pratos Quentes</string>
    <string name="temakis">Temakis</string>
    <string name="pecas">Peças</string>
    <string name="bebidas">Bebidas</string>
    <string name="combos">Combos</string>
    <string name="rs">R$</string>
    <string name="subtotal_">\"Subtotal: \"</string>
    <string name="sair">Sair</string>
    <string name="adicionar_mais_itens">Adicionar mais itens</string>
    <string name="logradouro">Logradouro</string>
</resources>