<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:paddingHorizontal="30dp"
            android:gravity="center_horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/txtTituloEditar"
                style="@style/title1"
                android:text="@string/editar_perfil"/>

            <EditText
                android:id="@+id/edtxtNome"
                style="@style/editTextRed"
                android:hint="@string/nome_completo"
                app:layout_constraintTop_toBottomOf="@+id/txtTituloCadastro" />

            <EditText
                android:id="@+id/edtxtTelefone"
                style="@style/editTextRed"
                android:hint="@string/telefone"
                android:inputType="phone"
                app:layout_constraintTop_toBottomOf="@+id/edtxtNome" />

            <EditText
                android:id="@+id/edtxtEmail"
                style="@style/editTextRed"
                android:hint="@string/email"
                app:layout_constraintTop_toBottomOf="@+id/edtxtTelefone" />

            <EditText
                android:id="@+id/edtxtSenha"
                style="@style/editTextRed"
                android:hint="@string/senha"
                android:inputType="textPassword"
                app:layout_constraintTop_toBottomOf="@+id/edtxtEmail" />

            <EditText
                android:id="@+id/edtxtConfSenha"
                style="@style/editTextRed"
                android:hint="@string/confirmar_senha"
                android:inputType="textPassword"
                app:layout_constraintTop_toBottomOf="@+id/edtxtSenha" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/linearLayout">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="@mipmap/editar" />

            <Button
                android:id="@+id/btnSalvar"
                style="@style/buttonCadastrar"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="30dp"
                android:text="@string/salvar" />
        </RelativeLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>