<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:background="@mipmap/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="30dp"
        android:gravity="center">

        <TextView
            android:id="@+id/txtTituloLogin"
            style="@style/title1"
            android:text="@string/fazer_login"/>

        <EditText
            android:id="@+id/edtxtLogin"
            style="@style/editTextRed"
            android:hint="@string/login_"
            app:layout_constraintTop_toBottomOf="@+id/txtTituloLogin" />

        <EditText
            android:id="@+id/edtxtSenha"
            style="@style/editTextRed"
            android:hint="@string/senha_"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@+id/edtxtLogin" />

        <Button
            android:id="@+id/btnLogin"
            style="@style/buttonSalvar"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:text="@string/continuar"
            android:layout_marginTop="35dp" />

        <TextView
            android:id="@+id/txtCadastro"
            style="@style/textviewred"
            android:textSize="16dp"
            android:text="@string/cadastre_se"
            android:layout_marginTop="15dp"
            android:clickable="true"
            android:gravity="center"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>