<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <include
        android:id="@+id/header"
        layout="@layout/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="60dp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_menu"
        app:layout_constraintTop_toBottomOf="@+id/header"
        android:gravity="center_horizontal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/title3"
                android:text="@string/carrinho"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txtLimpar"
                style="@style/textviewred"
                android:layout_width="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/limpar"
                android:clickable="true"/>
        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxHeight="400dp">

            <ListView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <TextView
                    style="@style/textviewgray4"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="20dp"
                    android:text="@string/subtotal" />

                <TextView
                    android:id="@+id/txtSubtotal"
                    style="@style/textviewgray4"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="20dp"
                    android:text="@string/preco" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/textviewgray4"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="20dp"
                    android:text="@string/taxa_de_entrega" />

                <TextView
                    android:id="@+id/txtTaxa"
                    style="@style/textviewgray4"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="20dp"
                    android:text="@string/preco" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <TextView
                    style="@style/textviewblack"
                    android:layout_width="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="20dp"
                    android:text="@string/total" />

                <TextView
                    android:id="@+id/txtTotal"
                    style="@style/textviewblack"
                    android:layout_width="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="20dp"
                    android:text="@string/preco" />
            </RelativeLayout>

            <TextView
                style="@style/title2"
                android:text="@string/pagamento"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/txtFormaPagto"
                style="@style/textviewred"
                android:text="@string/selecione_a_forma_de_pagamento"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"/>

            <TextView
                style="@style/title2"
                android:text="@string/entrega"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/txtEntrega"
                style="@style/textviewred"
                android:text="@string/selecione_o_endere_o_de_entrega"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"/>
        </LinearLayout>

        <Button
            android:id="@+id/btnPedido"
            android:layout_width="160dp"
            android:layout_height="30dp"
            style="@style/buttonSalvar"
            android:text="@string/fazer_pedido"
            android:layout_marginTop="40dp"/>
    </LinearLayout>

    <include
        android:id="@+id/bottom_menu"
        layout="@layout/bottom_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>