<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:background="@color/white"
    android:padding="20dp">

    <LinearLayout
        android:id="@+id/linearHistorico"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginVertical="10dp">

        <TextView
            android:id="@+id/txtData"
            style="@style/textviewblackbold"
            android:text="@string/data" />

        <TextView
            android:id="@+id/txtItens"
            android:layout_width="wrap_content"
            style="@style/textviewblack"
            android:text="@string/numero_de_itens"/>

        <TextView
            android:id="@+id/txtTotal"
            style="@style/textviewblackbold"
            android:text="@string/preco"
            android:layout_marginVertical="8dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/gray_light" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>