<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtPedidoRealizado"
            style="@style/titlePagamento"
            android:text="@string/pedido_realizado" />

        <TextView
            android:id="@+id/txtAguarde"
            style="@style/textviewgray"
            android:text="@string/aguarde" />

        <View
            android:layout_width="610dp"
            android:layout_height="610dp"
            android:background="@drawable/circle"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="30dp"
            android:layout_marginStart="-50dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/delivery"
            android:layout_marginTop="-550dp"
            android:layout_marginLeft="150dp"/>

        <TextView
            android:id="@+id/txtVoltar"
            style="@style/textviewwhite"
            android:text="@string/voltar_pagina_principal"
            android:layout_marginTop="120dp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>